[gd_scene load_steps=23 format=2]

[ext_resource path="res://Roboto/Roboto-Medium.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Roboto/Roboto-Light.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Roboto/Roboto-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Register Screen/LoginClickText.gd" type="Script" id=4]
[ext_resource path="res://Register Screen/CreateAccountBtn.gd" type="Script" id=6]

[sub_resource type="StreamTexture" id=1]
flags = 4
load_path = "res://.import/RegisterBackground.png-4d751b87a48e357a394e9edb838d79b4.stex"

[sub_resource type="DynamicFont" id=2]
size = 31
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=13]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="Theme" id=5]

[sub_resource type="DynamicFont" id=6]
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=8]
size = 12
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.521569, 0.521569, 0.521569, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.176471, 0.2, 0.227451, 1 )

[sub_resource type="DynamicFont" id=12]
size = 12
use_filter = true
font_data = ExtResource( 3 )

[node name="RegisterScreen" type="Node2D"]

[node name="RegisterBackground" type="Sprite" parent="."]
position = Vector2( 222, 409 )
rotation = -9.79751e-05
scale = Vector2( 1.00262, 1.00247 )
texture = SubResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -178.839
margin_top = -343.114
margin_right = 120.161
margin_bottom = -303.114
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Create new account"

[node name="RichTextLabel2" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -179.0
margin_top = -283.0
margin_right = 19.0
margin_bottom = -261.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Already have an Account ?"

[node name="LoginClickText" type="Button" parent="RegisterBackground"]
margin_left = 13.6518
margin_top = -284.241
margin_right = 61.6518
margin_bottom = -262.241
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/disabled = SubResource( 18 )
custom_styles/normal = SubResource( 14 )
text = "Log in"
script = ExtResource( 4 )

[node name="EmailInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -180.846
margin_top = -214.431
margin_right = 174.154
margin_bottom = -167.431
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
placeholder_text = "Email"
placeholder_alpha = 0.3

[node name="NameInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -179.856
margin_top = -140.613
margin_right = 175.144
margin_bottom = -93.6134
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
placeholder_text = "Display Name"
placeholder_alpha = 0.3

[node name="PasswordInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -179.863
margin_top = -65.798
margin_right = 175.137
margin_bottom = -18.798
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
secret = true
placeholder_text = "Create Password"
placeholder_alpha = 0.3

[node name="ConfirmInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -179.871
margin_top = 10.0149
margin_right = 175.129
margin_bottom = 57.0149
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
secret = true
placeholder_text = "Confirm Password"
placeholder_alpha = 0.3

[node name="DoBInput" type="LineEdit" parent="RegisterBackground"]
margin_left = -179.878
margin_top = 85.8279
margin_right = 175.122
margin_bottom = 132.828
theme = SubResource( 5 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
placeholder_text = "Date of Birth (MM/DD/YYYY)"
placeholder_alpha = 0.3

[node name="ToCCheckBox" type="CheckBox" parent="RegisterBackground"]
margin_left = -184.999
margin_top = 154.037
margin_right = -160.999
margin_bottom = 178.037
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
clip_text = true

[node name="CreateAccountBtn" type="Button" parent="RegisterBackground"]
margin_left = -179.0
margin_top = 222.491
margin_right = 176.0
margin_bottom = 269.491
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 9 )
custom_styles/disabled = SubResource( 11 )
custom_styles/normal = SubResource( 10 )
disabled = true
text = "Create account"
script = ExtResource( 6 )

[node name="RichTextLabel3" type="RichTextLabel" parent="RegisterBackground"]
margin_left = -160.0
margin_top = 154.007
margin_right = 175.0
margin_bottom = 188.007
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 12 )
text = "I have read and accept the Terms and Conditions and Privacy Policy."
